remove dependency commons-collections:3.2.2